<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.antcodes.anatomist</groupId>
    <artifactId>anatomist</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>anatomist</name>
    <description>JavaParser + SymbolSolver based Java code intelligence for Agent LLMs</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>

        <javaparser.version>3.28.1</javaparser.version>
        <sqlite.version>3.47.0.0</sqlite.version>
        <picocli.version>4.7.6</picocli.version>
        <asm.version>9.8</asm.version>
        <junit.version>5.10.2</junit.version>
        <surefire.version>3.2.5</surefire.version>
        <native.version>0.10.3</native.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>${javaparser.version}</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite.version}</version>
        </dependency>

        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>

        <!--
          ASM is used by JdkTypeCatalogBuilder (build-time tool: scans
          $JAVA_HOME modules and produces META-INF/anatomist/jdkN-types.bin).
          It is NOT used by the production runtime today; once AsmTypeSolver
          replaces javassist (scenario 6 Task C) the scope here will rise.
          Marked compile because the catalog builder ships in the same jar
          alongside test infrastructure that exercises it.
        -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${asm.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>anatomist</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>info.picocli</groupId>
                            <artifactId>picocli-codegen</artifactId>
                            <version>${picocli.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Aproject=anatomist</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!--
          mvn -Pnative -DskipTests package
            => target/anatomist (single binary)

          Produces a GraalVM native binary covering all CLI subcommands
          (index, query, watch, enrich, annotate). See
          docs/scenario-6-native-image.md for the architectural notes.

          Build args rationale:
            * no-fallback           : never silently bake the JVM in;
                                      if config is missing, fail loudly.
            * UnlockExperimentalVMOptions / ReportExceptionStackTraces
                                    : surface full stack traces during dev.
            * enable-url-protocols=jar
                                    : sqlite-jdbc's feature already requests
                                      this; declaring at top level is harmless.
            * initialize-at-build-time
                                    : freeze anatomist / javaparser / asm at
                                      build time. SecureRandom + sqlite-jdbc
                                      stay runtime-init.
        -->
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <imageName>anatomist</imageName>
                            <mainClass>com.anatomist.cli.AnatomistCli</mainClass>
                            <fallback>false</fallback>
                            <verbose>false</verbose>
                            <buildArgs>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--enable-url-protocols=jar</buildArg>
                                <buildArg>--initialize-at-build-time=com.anatomist</buildArg>
                                <buildArg>--initialize-at-build-time=com.github.javaparser</buildArg>
                                <buildArg>--initialize-at-build-time=org.objectweb.asm</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
